# aml-npu-sdk

./: CMakeLists.txt  README.md  aml-npu-sdk.pc.in
debian/: control
include/HAL/: gc_hal_options.h
nngpu_kernels/: AvgPooling.vx  Batch2Space.vx  Depth2Space.vx  DepthwiseConv.vx  Gemm.vx  L2NormSumScale.vx  L2NormSumSqrt.vx  MaxPooling.vx  Prelu.vx  ROIPool.vx  TensorCopy.vx  TensorEltwise.vx  TensorTranspose.vx
nnvxc_kernels/: AvgPooling.vx  Batch2Space.vx  BatchNorm.vx  DepthwiseConv.vx  FullyConnected.vx  Gemm.vx  Gemm_noBias.vx  L2NormSumScale.vx  L2NormSumSqrt.vx  LSTMUnitHiddenOutExt.vx  LeakyRelu.vx  MaxPooling.vx  NormalizationUint8.vx  ROIPool.vx  RPNRegression.vx  TFAvgPooling.vx  Tensor2DAdd.vx  TensorAdd.vx  TensorCopy.vx  TensorMeanAxis.vx  TensorScale.vx  TensorTR.vx
packaging/: aml-npu-sdk.spec  amlogic-vsi-npu-sdk.spec
sdk/include/HAL/: gc_hal_options.h
sdk/nngpu_kernels/: Activation.vx  AvgPooling.vx  Conv2D_1x1.vx  DepthwiseConv.vx  EmbeddingLUT.vx  Gemm.vx  Gemm_noBias.vx  HashLUT.vx  L2NormSumScale.vx  L2NormSumSqrt.vx  L2Pooling.vx  MaxPooling.vx  Normalization.vx  Reverse.vx  Rnn.vx  Space2Batch.vx  Space2Depth.vx  Tensor2Row.vx  TensorCopy.vx  TensorCopyROI.vx  TensorElewise.vx  TensorMeanAxis0.vx  TensorScale.vx  TensorStridedSlice.vx  TensorTranspose.vx
sdk/nnvxc_kernels/: Activation.vx  ActivationSoftRelu.vx  Activation_UInt8.vx  AvgPooling.vx  AvgPooling_UInt8.vx  Batch2Space.vx  BatchNorm.vx  DepthwiseConv.vx  Floor.vx  FullyConnected.vx  Gemm.vx  Gemm_noBias.vx  L2NormSumScale.vx  L2NormSumSqrt.vx  L2Pooling.vx  LSTMUnitHiddenOutExt.vx  LSTMUnitStateOutExt.vx  Normalization.vx  NormalizationUint8.vx  ROIRect2ROIList.vx  Reshuffle.vx  Space2Batch.vx  TFAvgPooling.vx  Tensor2DAdd.vx  Tensor2Row.vx  TensorAdd.vx  TensorCopy.vx  TensorDiv.vx  TensorMeanAxis.vx  TensorMul.vx  TensorMulSatRTE.vx  TensorPad.vx  TensorPad2.vx  TensorScale.vx  TensorTR.vx  TensorTranspose.vx
sdk/ovx12_vxcKernels/: bilateral_filter.vx  hog_features.vx  upsample_convert.vx  upsample_padding.vx
