# CMake configuraiton file

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT("aml-npu-sdk")

IF(NOT DEFINED FULLVER)
	SET(FULLVER "6.4.0.10")
ENDIF(NOT DEFINED FULLVER)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})

IF(NOT DEFINED BINDIR)
	SET(BINDIR "${PREFIX}/bin")
ENDIF(NOT DEFINED BINDIR)

IF(NOT DEFINED LIBDIR)
	SET(LIBDIR "${PREFIX}/lib")
ENDIF(NOT DEFINED LIBDIR)

IF(NOT DEFINED PCDIR)
	SET(PCDIR "${PREFIX}/lib/pkgconfig")
ENDIF(NOT DEFINED PCDIR)

IF(NOT DEFINED INCDIR)
	SET(INCDIR "${PREFIX}/include/${PROJECT_NAME}")
ENDIF(NOT DEFINED INCDIR)

SET(pc_dependents "")

SET(PC_NAME ${PROJECT_NAME})
SET(PC_REQUIRED ${pc_dependents})
SET(PC_LDFLAGS "-lOpenVX -lOpenVXU -lCLC -lVSC -lGAL -lm -lrt")
SET(PC_DESCRIPTION "Amlogic Verisilicon NPU SDK Library")
CONFIGURE_FILE(
    ${PROJECT_NAME}.pc.in
    ${PROJECT_NAME}.pc
    @ONLY
)

IF("${ARCH}" STREQUAL "arm")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib32/ DESTINATION ${LIBDIR}
		FILES_MATCHING PATTERN "*.so")
ELSE("${ARCH}" STREQUAL "arm")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib64/ DESTINATION ${LIBDIR}
		FILES_MATCHING PATTERN "*.so")
ENDIF("${ARCH}" STREQUAL "arm")

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION ${INCDIR}
		FILES_MATCHING PATTERN "*.h")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/nngpu_kernels DESTINATION ${INCDIR})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/nnvxc_kernels DESTINATION ${INCDIR})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ovx12_vxcKernels DESTINATION ${INCDIR})
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION ${PCDIR})
